updated my new logic

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <h1>Welcome git Training</h1>
 <h2>Currently I'm log in to dev branch</h2>
-
+<h3>my code</h3>
+<h4>my new code</h4>
+<h5>my new src code</h5>
+<h6>Test codes</h6>
 
 
 <script>console.log("DevOps")</script>
+
+
