completed my own logic

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 <h6>Test codes</h6>
 
 
+<style>
+    h1{
+        color: blueviolet;
+    }
+    h2{
+        font-size: 10px;
+    }
+    h3{
+        background-color: antiquewhite;
+    }
+</style>
+
 <script>console.log("DevOps")</script>
 
 
